# scale_esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  config.h  main.c
main/implementation/: ad1115_task.c  ad1115_task.h  spp_task.c  spp_task.h
main/interface/: CMakeLists.txt  bt_interface.c  bt_interface.h  weigh_interface.c  weigh_interface.h
